2013-08-14 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Removed erroneously committed chunk.

2013-08-14 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Improve the footer layout. My previous commit still
	 had a layout problem :(

2013-08-08 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Improve the footer layout.

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the call to
	enterprise function.
	
	Fixes: #2370 

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_auth.php, godmode/admin_access_logs.php,
	godmode/agentes/module_manager.php: removed the code as
	"call time passing variables by reference" deprecated in PHP 5.4.

2013-08-07 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Fixed footer layout probrems: Now we can see the
	 footer at the browser bottom when reducing the browser height.
	 Also fixes the footer overlay probrem in some pages (e.g.
	 "Modules in policy" page).

2013-08-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed when the tagente have
	a unknown server show none.

2013-08-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/manage_config_remote.php,
	godmode/agentes/agent_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	include/functions_modules.php,
	include/functions_agents.php, operation/agentes/estado_agente.php:
	fixed and unified the code to access the remote config.

2013-08-01 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added new API function
	'api_set_enable_disable_agent'.

	MERGED FROM TRUNK.

2013-07-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_prediction.php,
	include/constants.php: fixed the repeat operator and added some
	constants for to make more easy the code.
	
	Fixes: #2279
	
	MERGED FROM THE TRUNK
