@@ -114,7 +114,8 @@ echo '<div style="height: 5px">&nbsp;</div>';
 
 if (!$new_agent) {
 	// Agent remote configuration editor
-	$filename = config_agents_get_agent_config_filenames($id_agente);
+	enterprise_include_once('include/functions_config_agents.php');
+	$filename = enterprise_hook('config_agents_get_agent_config_filenames', $id_agente);
 }
 
 $disk_conf = (bool) get_parameter ('disk_conf');
